--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </p>
       </div>
       <div class="about-photo">
-        <img src="methuli.jpeg" alt="Methuli Lisansa" class="profile-img">
+        <img src="Methuli.jpeg" alt="Methuli Lisansa" class="profile-img">
       </div>
     </section>
 
