--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="edu-flex">
         <div class="edu-block">
           <h3>Secondary Education</h3>
-          <p>Anula Vidyalaya ,Nugegoda<br>2021 – 2024<br>Advanced Levels: Biology Stream</p>
+          <p>Anula Vidyalaya , Nugegoda<br>(2021 – 2024)<br>Advanced Levels: Biology Stream</p>
         </div>
         <div class="edu-block">
           <h3>Higher Education</h3>
